<resources>
    <string name="app_name">IntentApp</string>
    <string name="move_activity">Switch Activity</string>
    <string name="move_with_data">Switch Activity with Data</string>
    <string name="move_with_object">Switch Activity with Object</string>
    <string name="dial_number">Dial a Number</string>
    <string name="move_with_result">Switch Activity for Result</string>
    <string name="result_from_activity">Activity Result</string>
    <string name="choose_album">Pick an Album:</string>
    <string name="_TDSOTM">The Dark Side of the Moon</string>
    <string name="_TW">The Wall</string>
    <string name="_TFC">The Final Cut</string>
    <string name="_AHM">Atom Heart Mother</string>
    <string name="choose">Choose</string>
    <string name="data_received">Data Received</string>
    <string name="object_received">Object Received</string>
    <string name="this_is_moveactivity">This is MoveActivity</string>
</resources>